--- a/electron/package.json
+++ b/electron/package.json
@@ -5,7 +5,7 @@
     "main": "main.js",
     "scripts": {
         "start": "electron .",
-        "build": "electron-builder"
+        "build": "npx electron-builder"
     },
     "keywords": [],
     "author": "Christopher Hosken",
