--- a/electron/package.json
+++ b/electron/package.json
@@ -11,7 +11,7 @@
     "author": "Christopher Hosken",
     "license": "GPL-3.0-only",
     "devDependencies": {
-        "electron": "^37.4.0",
+        "electron": "37.4.0",
         "electron-builder": "^26.0.12"
     },
     "dependencies": {
