--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,15 +1,12 @@
-name: Build Deadshot
+name: Windows
 
 on:
   push:
-  workflow_dispatch: # allow manual trigger
+  workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: windows-latest
 
     steps:
       - name: Checkout code
@@ -25,7 +22,6 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.13'
-
 
       - name: Install dependencies
         run: npm run install:all
