--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-    "name": "deadshot",
-    "scripts": {
-        "install:all": "npm install && npm run install:backend && npm run install:frontend && npm run install:electron",
-        "install:backend": "cd backend && pip install -r requirements.txt",
-        "install:frontend": "cd frontend && npm install",
-        "install:electron": "cd electron && npm install",
-        "dev": "concurrently -k \"npm run dev:backend\" \"npm run dev:frontend\" \"npm run dev:electron\"",
-        "dev:backend": "cd backend && python -m uvicorn main:app --reload",
-        "dev:frontend": "cd frontend && npm run dev",
-        "dev:electron": "wait-on http://localhost:5173 && cd electron && npm start",
-        "build": "npm-run-all build:backend build:frontend build:electron --sequential",
-        "build:frontend": "cd frontend && npm run build",
-        "build:backend": "cd backend && python build.py",
-        "build:electron": "cd electron && npm run build",
-        "check": "npm-run-all check:backend check:frontend check:electron",
-        "check:backend": "cd backend && ruff check",
-        "check:frontend": "cd frontend && npm run check",
-        "check:electron": "cd electron && npm run check"
-
-    },
-    "devDependencies": {
-        "concurrently": "^9.2.1",
-        "npm-run-all": "^4.1.5",
-        "wait-on": "^8.0.4"
-    }
+  "name": "deadshot",
+  "private": true,
+  "version": "0.0.1",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.33.0",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
+    "@vitejs/plugin-react": "^5.0.0",
+    "eslint": "^9.33.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.39.1",
+    "vite": "^7.1.2"
+  }
 }
