--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-select": "^5.10.2",
     "three": "^0.180.0"
   },
   "devDependencies": {
